--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
       width: 80px;
       background: #FFFFFF;
       color: #666666;
-      float: right;
+      float: left;
       text-align: center;
       font-size: 16px;
       cursor: pointer;
       transition: 0.3s;
       border-radius: 17px;
       box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 3px 2opx 0 rgba(0,0,0,0.19);
+      margin: 7px;
       }
       body {
       width:95%;
