--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       body {
       padding: 50px;
       background-color: #F5F5F5;
+	  width:95%;
+      margin-left:auto;
+      margin-right:auto;
       }
       table {
       background-color: #FFFFFF;
@@ -24,28 +27,53 @@
       #colDate { width: 120px }
       #colButtons { width: 87px }
       .addBtn {
-      padding: 10px;
-      width: 80px;
-      background: #FFFFFF;
+      padding: 0px;
+      width: 60px;
+      background: transparent;
       color: #666666;
-      float: left;
+      float: right;
       text-align: center;
       font-size: 16px;
       cursor: pointer;
       transition: 0.3s;
       border-radius: 17px;
-      box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 3px 2opx 0 rgba(0,0,0,0.19);
+	  border-color: transparent;
       margin: 7px;
       }
-      body {
-      width:95%;
-      margin-left:auto;
-      margin-right:auto;
-      }
       th, caption {
-      background-color: #C5E7DB;
+      background-color: #D8E7FD;
       font-weight: 700;
       }
+      .footer {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      padding: 15px 0px 0px 20px; 
+      width: 100%;
+      background-color: #D8E7FD;
+      color: black;
+      text-align: center;
+      }
+      .footer-left {
+      display: inline-block;
+      text-align: left;
+      width:80%;
+      }
+      .footer-right{
+      vertical-align:top;
+      display: inline-block;
+      text-align: right;
+      }
+	  .btn-outline-primary {
+	  color: black;
+	  font-size: 16px;
+	  border-color: transparent;
+	  }
+	  .btn-outline-primary:hover {
+	  color: black;
+	  background-color: #C5DBFC;
+	  border-color: #8BB7F9;
+	  }
     </style>
   </head>
   <body>
@@ -73,7 +101,7 @@
         <tr>
           <td><input type="checkbox" id="scales" name=""
             unchecked></td>
-          <td>Test1</td>
+          <td>160 Zeichen Beispieltext:</td>
           <td>25. April 2022</td>
           <td>20% </td>
           <td>
@@ -86,7 +114,7 @@
         <tr>
           <td><input type="checkbox" id="scales" name=""
             unchecked></td>
-          <td>Lorem ipsum </td>
+          <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient.</td>
           <td>03. Mai 2022</td>
           <td>0% </td>
           <td>
@@ -99,5 +127,13 @@
       </table>
     </div>
   </body>
+  <div class="footer">
+    <div class="footer-left">
+       <p>Copyright © 2022, All Rights Reserved</p>
+    </div>
+    <div class="footer-right">
+       <p><button type="button" class="btn btn-outline-primary" onclick="window.location.href='impressum.html';"><i class="fa fa-address-card"></i> Impressum</button></p>
+    </div>
+  </div>
 </html>
 
