--- a/start.html
+++ b/start.html
@@ -81,7 +81,7 @@
 	<h1>To Do List</h1><br>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<div>
-		<button class="addBtn"><i class="fa fa-plus"></i> Add</button>
+		<button class="addBtn" onclick="window.location.href='todo_new.html';"><i class="fa fa-plus"></i> Add</button>
 	</div>
 	<div>
 		<table>
@@ -106,7 +106,7 @@
 				<td>20%</td>
 				<td>
 					<div aria-label="Basic outlined example" class="btn-group btn-group-sm" role="group">
-						<button class="btn btn-outline-primary" type="normalbtn"><i class="fa fa-pencil fa-fw"></i></button> <button class="btn btn-outline-primary" type="normalbtn"><i class="fa fa-trash fa-fw"></i></button>
+						<button class="btn btn-outline-primary" onclick="window.location.href='todo_edit.html';" type="normalbtn"><i class="fa fa-pencil fa-fw"></i></button> <button class="btn btn-outline-primary" type="normalbtn"><i class="fa fa-trash fa-fw"></i></button>
 					</div>
 				</td>
 			</tr>
@@ -117,7 +117,7 @@
 				<td>0%</td>
 				<td>
 					<div aria-label="Basic outlined example" class="btn-group btn-group-sm" role="group">
-						<button class="btn btn-outline-primary" type="normalbtn"><i class="fa fa-pencil fa-fw"></i></button> <button class="btn btn-outline-primary" type="normalbtn"><i class="fa fa-trash fa-fw"></i></button>
+						<button class="btn btn-outline-primary" onclick="window.location.href='todo_edit.html';" type="normalbtn"><i class="fa fa-pencil fa-fw"></i></button> <button class="btn btn-outline-primary" type="normalbtn"><i class="fa fa-trash fa-fw"></i></button>
 					</div>
 				</td>
 			</tr>
