--- a/start.html
+++ b/start.html
@@ -128,7 +128,7 @@
 			<p>Copyright © 2022, All Rights Reserved</p>
 		</div>
 		<div class="footer-right">
-			<p><button class="btn btn-outline-primary" onclick="window.location.href='impressum.html';" type="button"><i class="fa fa-address-card"></i> Impressum</button></p>
+			<p><button class="btn" onclick="window.location.href='impressum.html';" type="button"><i class="fa fa-address-card"></i> Impressum</button></p>
 		</div>
 	</div>
 </body>
