--- a/impressum.html
+++ b/impressum.html
@@ -49,7 +49,9 @@
 	<h1>Impressum</h1>
 	<p><br>
 	Josefine Ponto, MA-Nummer: 412703<br>
-	Miriam Richter, MA-Nummer: 411908</p>
+	Miriam Richter, MA-Nummer: 411908</p><br>
+	<p><strong>Icons:</strong><br>
+	<a href="https://fontawesome.com/">Font Awesome</a>, CC BY 4.0 License</p>
 	<div class="footer">
 		<div class="footer-left">
 			<p>Copyright © 2022, All Rights Reserved</p>
