--- a/impressum.html
+++ b/impressum.html
@@ -54,7 +54,7 @@
 	<a href="https://fontawesome.com/">Font Awesome</a>, CC BY 4.0 License</p>
 	<div class="footer">
 		<div class="footer-left">
-			<p>Copyright © 2022, All Rights Reserved</p>
+			<p>Copyright © 2022</p>
 		</div>
 		<div class="footer-right">
 			<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
