--- a/start.html
+++ b/start.html
@@ -125,7 +125,7 @@
 	</div>
 	<div class="footer">
 		<div class="footer-left">
-			<p>Copyright © 2022, All Rights Reserved</p>
+			<p>Copyright © 2022</p>
 		</div>
 		<div class="footer-right">
 			<p><button class="btn" onclick="window.location.href='impressum.html';" type="button"><i class="fa fa-address-card"></i> Impressum</button></p>
