--- a/todo_edit.html
+++ b/todo_edit.html
@@ -60,7 +60,7 @@
 	<p></p>
 	<div class="footer">
 		<div class="footer-left">
-			<p>Copyright © 2022, All Rights Reserved</p>
+			<p>Copyright © 2022</p>
 		</div>
 		<div class="footer-right">
 			<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
